# jobbrainmine

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md
brainjob/: CHANGELOG.md  README.md  pyproject.toml
brainjob/data/jobs/beuc-food-policy-trainee-6-months-traineeship/: application.json  contacts.json  documents.json  job.json  notes.json
brainjob/data/jobs/example-company-policy-officer/: application.json  contacts.json  documents.json  job.json  notes.json
brainjob/data/jobs/giz-junior-advisor-for-the-global-gateway-investment-climate-reform-facility/: application.json  contacts.json  documents.json  job.json  notes.json
brainjob/data/jobs/green-european-foundation-policy-consultant-on-green-transition/: application.json  contacts.json  documents.json  job.json  notes.json
brainjob/data/jobs/icmpd-team-assistant/: application.json  contacts.json  documents.json  job.json  notes.json
brainjob/data/jobs/plan-international-climate-economic-empowerment-lead/: application.json  (+4 more)
brainjob/docs/: repo-summary.md
brainjob/schemas/: application.schema.json  contacts.schema.json  documents.schema.json  job.schema.json  notes.schema.json
brainjob/src/brainjob/: __init__.py  __main__.py  add.py  archive.py  cli.py  dashboard.css  dashboard.js  integrity.py  io.py  paths.py  schemas.py  status.py  sync.py  validate.py  watch.py
brainjob/tests/: conftest.py  test_add.py  test_archive.py  test_cli.py  test_integrity.py  test_status.py  test_sync.py  test_validate.py
brainjob/tracking/: dashboard.html  index.json
brainjob/tracking/assets/: .gitkeep
(+43 files in other folders)
