[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brainjob"
version = "0.1.0"
description = "JSON-only job-search information system with immutable employer content"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Brainjob" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
brainjob = "brainjob.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
brainjob = ["dashboard.css", "dashboard.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
